功能：支持修改向量集合设置
